# jpydzr10-emission-impossible

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: defaults.py  users.py
app/application/: bulk_import.py  class_models.py  demo.py  email_sender.py  pdf_export.py  use_cases.py
app/application/users/: users.py  (+2 more)
cli/: menu.py
data_files/: emissions.csv  tbl_authorisations.csv  tbl_certif.csv  tbl_change_log.csv  tbl_companies.csv  tbl_converters.csv  tbl_e_cons.csv  tbl_e_prod.csv  tbl_e_purc.csv  tbl_e_sold.csv  tbl_email_log.csv  tbl_factors.csv  tbl_fugitve_emissions.csv  tbl_mobile_combustion.csv  tbl_permissions.csv  tbl_process_emissions.csv  tbl_reduction_targets.csv  tbl_stacjonary_combustion.csv  tbl_stationary_combustion.csv  tbl_users.csv
data_files/backups/: tbl_mobile_combustion_20260317_231527.csv  tbl_mobile_combustion_20260317_235709.csv  tbl_stationary_combustion_20260317_231527.csv  tbl_stationary_combustion_20260318_000515.csv
docs/: metodologia_i_opis_narzedzia.md
tests/: conftest.py  test_audit_log.py  test_bulk_import.py  test_converters.py  test_data_consistency.py  test_data_quality.py  test_emission_calculations.py  test_generate_summary.py  test_models.py  test_pdf_export.py  test_reduction_targets.py  test_repositories.py
web/: docker-compose.yml  manage.py
web/accounts/: models.py
web/calculator/: utils.py
web/companies/: models.py
web/config/: asgi.py  settings.py  urls.py  wsgi.py
web/emission_impossible/: asgi.py  settings.py  wsgi.py
web/what_if/: apps.py
(+9 files in other folders)
